fixed errors for destination database
