# controller/users.js
@@ -1,64 +1,46 @@
-const mongodb = require('../data/database');
+// controller/users.js
 const { ObjectId } = require('mongodb');
+const dbClient = require('../data/database');
 
-const allUsers = async (req, res) => {
+async function allUsers(_req, res) {
     try {
-        const result = await mongodb.getDB().collection('users').find();
+        const users = await dbClient.getDb().collection('users').find({}).toArray();
         res.status(200).json(users);
-    }
-    catch (err) {
-        res.status(500).json({ message: err.message });
-    }
-};
-
-const createUser = async (req, res) => {
-    try {
-        const user = {
-            username: req.body.username,
-            password: req.body.password
-        };
-        const response = await mongodb.getDB().collection('users').insertOne(user);
-        res.status(201).json(response);
     } catch (err) {
         res.status(500).json({ message: err.message });
     }
-};
+}
 
-const updateUser = async (req, res) => {
+async function createUser(req, res) {
     try {
-        const userId = new ObjectId(req.params.id);
-        const user = {
-            username: req.body.username,
-            password: req.body.password
-        };
-        const response = await mongodb.getDB().collection('users').replaceOne({ _id: userId }, user);
-        if (response.modifiedCount > 0) {
-            res.status(201).json(response);
-        } else {
-            res.status(500).json(response.error || 'Some error occurred while creating the user.');
-        }
-
+        const user = { username: req.body.username, password: req.body.password };
+        const result = await dbClient.getDb().collection('users').insertOne(user);
+        res.status(201).json({ _id: result.insertedId, ...user });
     } catch (err) {
         res.status(500).json({ message: err.message });
     }
-};
+}
 
-const deleteUser = async (req, res) => {
+async function updateUser(req, res) {
     try {
-        const userId = new ObjectId(req.params.id);
-        const user = {
-            username: req.body.username,
-            password: req.body.password
-        }
-        const response = await mongodb.getDB().collection('users').deleteOne({ _id: userId });
-        if (response.deletedCount > 0) {
-            res.status(201).json(response);
-        } else {
-            res.status(500).json(response.error || 'Some error occurred while creating the user.');
-        }
+        const id = new ObjectId(req.params.id);
+        const payload = { username: req.body.username, password: req.body.password };
+        const r = await dbClient.getDb().collection('users').replaceOne({ _id: id }, payload);
+        if (r.modifiedCount === 0) return res.status(404).json({ message: 'Not found or no changes' });
+        res.status(200).json({ _id: id, ...payload });
+    } catch (err) {
+        res.status(400).json({ message: 'Invalid id' });
     }
-    catch (err) {
-        res.status(500).json({ message: err.message });
+}
+
+async function deleteUser(req, res) {
+    try {
+        const id = new ObjectId(req.params.id);
+        const r = await dbClient.getDb().collection('users').deleteOne({ _id: id });
+        if (r.deletedCount === 0) return res.status(404).json({ message: 'Not found' });
+        res.status(204).send();
+    } catch (err) {
+        res.status(400).json({ message: 'Invalid id' });
     }
 }
 
@@ -66,6 +48,5 @@ module.exports = {
     allUsers,
     createUser,
     updateUser,
-    deleteUser,
-
+    deleteUser
 };
